# flox-conda-test

./: .pdm-python  README.md  conda_environment.yml  pyproject.toml  try.py
.flox/: env.json  pip.ini
.flox/env/: manifest.toml
flakes/fhs/: flake.nix
