[project]
name = "flox-conda-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jono", email = "jono@foodnotblogs.com"},
]
dependencies = ["lolpython>=2.2.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
